<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        tools:context="mytestprogram.ModalWindow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/SelectingType"
            android:id="@+id/modal.title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="#000000"
            android:padding="10dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_below="@id/modal.title"
            android:layout_above="@id/modal_cancel">
        <ImageView
                android:src="@drawable/record_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/modal_record"
                android:layout_weight="1"
                android:padding="15dp"
                android:tag="@string/record"/>
        <ImageView
                android:src="@drawable/task_note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/modal_task"
                android:layout_weight="1"
                android:padding="15dp"
                android:tag="@string/task"/>
        <ImageView
                android:src="@drawable/list_note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/modal_list"
                android:layout_weight="1"
                android:padding="15dp"
                android:tag="@string/list"/>
        <ImageView
                android:src="@drawable/schedule_note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/modal_schedule"
                android:layout_weight="1"
                android:padding="15dp"
                android:tag="@string/schedule"/>
    </LinearLayout>
    <TextView
            android:text=""
            android:layout_above="@id/modal_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/modal_message"
            android:textAlignment="center"
            android:textColor="#C62828"
            android:padding="15dp"/>
    <Button
            android:text="@string/cancel"
            android:background="#FFFFFF"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/modal_cancel"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:textAllCaps="false"
            android:layout_margin="15dp"/>
    <Button
            android:text="@string/ok"
            android:background="#FFFFFF"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/modal_ok"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:textAllCaps="false"
            android:layout_margin="15dp"/>
</RelativeLayout>