<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="mytestprogram.AddNoteForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
            android:layout_alignParentTop="true"
            android:id="@+id/addNote.scroll"
            android:layout_above="@id/addNote.ButtonOk"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

            <EditText
                    android:inputType="textMultiLine"
                    android:id="@+id/addNote.TextAction"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:gravity="start|top"
                    android:ems="10"
                    android:text=""
                    android:textSize="18sp"
                    android:hint="@string/action"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:ems="10"
                    android:textSize="18sp"
                    android:id="@+id/addNote.TextDescription"
                    android:hint="@string/description"/>
            <TextView
                    android:text="@string/other_params"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addNote.SwitcherParams"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:padding="10dp"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addNote.paramsLayout">
                <CheckBox
                        android:text="Отметить, как важное"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/addNote.importantLabel"/>
                <CheckBox
                        android:text="@string/notice_device"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/addNote.checkNoticeDevice"/>
                <Button
                        android:text="Добавить ссылку на запись"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/addNote.addLinks"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"/>
                <Button
                        android:text="добавить файлы"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/addNote.addPaths"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"/>
                <Button
                        android:text="@string/manage_check_times"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/addNote.manageCheckTimes"
                        android:textAllCaps="false"/>
                <TextView
                        android:text="уровень доступа к записе"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        android:padding="10dp"
                        android:textSize="18sp"/>
                <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/addNote.PrivacyGroup">
                    <RadioButton
                            android:text="Открытая"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/addNote.PublicButton"
                            android:layout_weight="1"
                            android:checked="true"/>
                    <RadioButton
                            android:text="Только чтение"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/addNote.readOnlyButton"
                            android:layout_weight="1"/>
                    <RadioButton
                            android:text="Закрытая"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/addNote.privateButton"
                            android:layout_weight="1"/>
                </RadioGroup>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/addNote.textPassword"
                        android:textColorHint="#000000"
                        android:hint="@string/password"
                        android:textColor="#000000"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
            android:text="@string/ok"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/addNote.ButtonOk"
            android:textAllCaps="false"
            android:layout_margin="5dp"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:id="@+id/addNote.ButtonCancel"
            android:textAllCaps="false"
            android:layout_margin="5dp"/>
</RelativeLayout>
